--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -139,4 +139,46 @@
   year      = {2019},
 }
 
+@Online{Microsoft2024,
+  author = {Microsoft},
+  date   = {2024-03-07},
+  title  = {What is Azure Databricks?},
+  url    = {https://learn.microsoft.com/en-gb/azure/databricks/introduction/},
+}
+
+@Online{Microsoft2024a,
+  author = {Microsoft},
+  date   = {2024-03-19},
+  editor = {Microsoft},
+  title  = {What is Azure Data Factory?},
+  url    = {https://learn.microsoft.com/en-us/azure/data-factory/introduction},
+}
+
+@InBook{Kromer2022a,
+  author    = {Kromer, Mark},
+  booktitle = {Mapping Data Flows in Azure Data Factory: Building Scalable ETL Projects in the Microsoft Cloud},
+  date      = {2022},
+  title     = {Common ETL Pipeline Practices in ADF with Mapping Data Flows},
+  doi       = {10.1007/978-1-4842-8612-8_5},
+  isbn      = {978-1-4842-8612-8},
+  url       = {https://doi.org/10.1007/978-1-4842-8612-8_5},
+  abstract  = {In the previous chapter, you learned about Mapping Data Flows in ADF and how to design an ETL pattern for data quality checking, cleaning, and prep. Now that we have a working data flow artifact, we need to execute it from a pipeline. Previously, we were able to peek at samples of the results while designing our logic. This was useful from the perspective of unit testing. The next step in building your ETL solution in ADF will be to test the data flow inside of a pipeline against the full dataset and execute from a debug session. Executing your data flow in the pipeline will write the data out to an ADLS Gen2 data lake folder as parquet. After verifying the results, we'll build an ETL data pipeline in the ADF pipeline designer that will provide rich workflow capabilities by adding control flow and other activity types in addition to the data flow activity.},
+}
+
+@Online{Microsoft2024b,
+  author = {Microsoft},
+  date   = {2024-03-01},
+  editor = {Microsoft},
+  title  = {What is Delta Live Tables?},
+  url    = {https://learn.microsoft.com/en-us/azure/databricks/delta-live-tables/},
+}
+
+@Online{Microsoft2024c,
+  author = {Microsoft},
+  date   = {2024-03-07},
+  editor = {Microsoft},
+  title  = {What is Delta Lake?},
+  url    = {https://learn.microsoft.com/en-us/azure/databricks/delta/},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
